# recorder

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py  language_analysis.py  named_entity_recognition.py  record_from_voice.py  settings.py  text_to_speech.py  voice_to_text.py
